# caliana

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: SPEC.md
examples/: interactive.ipynb  quickstart.ipynb
src/caliana/: __init__.py  analysis.py  app.py  export.py  figures.py  io.py  models.py  registration.py  roi.py  session.py  timeline.py
src/caliana/widgets/: __init__.py  _plot.py  _qt.py  analysis_widget.py  crop_widget.py  import_widget.py  leaf_widget.py  roi_widget.py
tests/: test_io.py  test_propagation.py  test_registration.py  test_smoke.py  test_smoothing.py  test_tracking.py  test_widgets.py
tests/data/: synthetic_calcium_imaging.tif
